# python-monorepo

./: .gitignore  README.md
.github/workflow/: test.yml
.github/workflows/: cd-common-ml.yml  cd-fastapi-ml.yml  ci-common-ml.yml  ci-fastapi-ml.yml  ci-lib-ml.yml  ci-lib-mq.yml  ci-lib-telemetry.yml  ci_lib_ml.yml  ci_lib_mq.yml  ci_lib_telemetry.yml  docker-test.yml  lib-test.yml  service-deploy.yml  service-test.yml  test.yml
libs/ml/: pyproject.toml
libs/ml/ml/: core.py
libs/ml/scripts/: format.sh  lint.sh  test.sh
libs/ml/tests/: test_main.py
libs/mq/: pyproject.toml
libs/mq/mq/: core.py
libs/mq/scripts/: build.sh  format.sh  lint.sh  test.sh
libs/mq/tests/: test_main.py
libs/telemetry/: .flake8  Dockerfile  pyproject.toml
libs/telemetry/scripts/: build.sh  format.sh  lint.sh  test.sh
libs/telemetry/telemetry/: core.py
libs/telemetry/tests/: test_main.py
scripts/: cov-html.sh  merge_coverage.sh
services/common-ml/: Dockerfile  pyproject.toml
services/common-ml/scripts/: build-push.sh  build.sh  format.sh  lint.sh  test-push.sh  test.sh
services/common-ml/tests/: test_main.py
services/fastapi-ml/: Dockerfile  docker-compose.yml  pyproject.toml
services/fastapi-ml/app/: config.py  main.py
services/fastapi-ml/scripts/: build-push.sh  build.sh  format.sh  lint.sh  test-push.sh  test.sh
services/fastapi-ml/tests/: conftest.py  constants.py  test_main.py
services/service-common/: Dockerfile  pyproject.toml
services/service-common/scripts/: build-push.sh  build.sh  format.sh  lint.sh  test.sh
services/service-common/service_common/: main.py
services/service-common/tests/: test_main.py
