[tool.poetry]
name = "telemetry"
version = "0"  # standard placeholder, will update dynamic when install service
description = ""
authors = ["Hai Che <cheviethai123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
opentelemetry-api = "1.19.0"

# pytest setup
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "6.2.2"
pytest-cov = "4.0.0"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
addopts = "--cov --cov-report term"
testpaths = ["tests"]

[tool.coverage.run]
source = ["telemetry"]
omit = ["./venv/*", "*tests*", "*_Users_*"]

[tool.coverage.paths]
source = ["telemetry", "/tmp/telemetry"] # /tmp for docker file generate test coverage


# pylint setup
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "23.3.0"
isort = "5.12.0"
autoflake = "2.0.2"
flake8 = "6.0.0"
mypy = "1.4.1"


[tool.isort]
profile = "black"

[tool.black]
line-length = 79 # Pep8 default


# Versioning as git commmit sha
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"


